# poem_flow-main

./: .env  .gitignore  README.md  poem.txt  pyproject.toml
src/poem_flow/: main.py
src/poem_flow/crews/poem_crew/: poem_crew.py
