[project]
name = "poem_flow"
version = "0.1.0"
description = "poem_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0",
    "pydantic>=2.10.6",
]

[project.scripts]
kickoff = "poem_flow.main:kickoff"
plot = "poem_flow.main:plot"
run_crew = "poem_flow.main:kickoff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
